tests/integration/errors/test_generic_not_a_template.sn
struct Point =>
  x: int
  y: int

fn main(): int =>
  var p: Point<int> = {
    x: 1,
    y: 2
  }
  return 0
